[gd_scene load_steps=13 format=3 uid="uid://c83mhft76d25o"]

[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_eesf3"]
[ext_resource type="Texture2D" uid="uid://bqd1x63hg4md0" path="res://assets/sprites/stars_bg.png" id="1_yfrjh"]
[ext_resource type="FontFile" uid="uid://const71ku4jon" path="res://assets/fonts/monogram.ttf" id="2_3jfxf"]
[ext_resource type="Texture2D" uid="uid://bmivdbdn3803j" path="res://assets/sprites/logo_white.png" id="2_gve0e"]
[ext_resource type="Texture2D" uid="uid://fwqq2iu6c17e" path="res://assets/sprites/vewd_16x8_rotated.png" id="4_c7qgs"]
[ext_resource type="FontFile" uid="uid://cwxgr01v16b3l" path="res://assets/fonts/at01.ttf" id="6_56sps"]
[ext_resource type="Texture2D" uid="uid://dpluju5b2s7iu" path="res://assets/sprites/logo_stup_os.png" id="7_tvdfs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o1yug"]

[sub_resource type="Animation" id="Animation_5eq1v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/TransitionRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-320, 0)]
}

[sub_resource type="Animation" id="Animation_5v7c2"]
resource_name = "intro"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -110), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_871wm"]
resource_name = "start_game_transition"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/TransitionRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-320, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d668i"]
_data = {
"RESET": SubResource("Animation_5eq1v"),
"intro": SubResource("Animation_5v7c2"),
"start_game_transition": SubResource("Animation_871wm")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eesf3")

[node name="ParallaxLayer" type="Parallax2D" parent="."]
modulate = Color(1, 1, 1, 0.145098)
repeat_size = Vector2(0, 240)
autoscroll = Vector2(0, 10)

[node name="StarsBg" type="Sprite2D" parent="ParallaxLayer"]
texture = ExtResource("1_yfrjh")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 125
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0

[node name="StartSinglePlayer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_colors/font_focus_color = Color(0, 0.654902, 0.882353, 1)
theme_override_colors/font_color = Color(0.709804, 0.709804, 0.709804, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("2_3jfxf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o1yug")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "1 PLAYER"
icon = ExtResource("4_c7qgs")
flat = true

[node name="StartMultiplayer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_colors/font_focus_color = Color(0, 0.654902, 0.882353, 1)
theme_override_colors/font_color = Color(0.709804, 0.709804, 0.709804, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("2_3jfxf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o1yug")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "2 PLAYERS"
icon = ExtResource("4_c7qgs")
flat = true

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_colors/font_focus_color = Color(0, 0.654902, 0.882353, 1)
theme_override_colors/font_color = Color(0.709804, 0.709804, 0.709804, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("2_3jfxf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o1yug")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "SETTINGS"
icon = ExtResource("4_c7qgs")
flat = true

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_colors/font_focus_color = Color(0, 0.654902, 0.882353, 1)
theme_override_colors/font_color = Color(0.709804, 0.709804, 0.709804, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("2_3jfxf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o1yug")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "QUIT"
icon = ExtResource("4_c7qgs")
flat = true

[node name="Logo" type="Node2D" parent="."]

[node name="LogoWhite3" type="Sprite2D" parent="Logo"]
modulate = Color(0.89, 0.62389, 0.1958, 1)
position = Vector2(160, 55)
scale = Vector2(0.96, 1)
texture = ExtResource("2_gve0e")

[node name="LogoWhite4" type="Sprite2D" parent="Logo"]
modulate = Color(0.89, 0.45034, 0.1958, 1)
position = Vector2(160, 59)
scale = Vector2(0.98, 1)
texture = ExtResource("2_gve0e")

[node name="LogoWhite" type="Sprite2D" parent="Logo"]
modulate = Color(0.890196, 0.262745, 0.196078, 1)
position = Vector2(160, 63)
texture = ExtResource("2_gve0e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d668i")
}

[node name="TransitionRect" type="ColorRect" parent="AnimationPlayer"]
offset_left = -320.0
offset_bottom = 240.0
color = Color(0.0745098, 0.0745098, 0.0745098, 1)

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.709804, 0.709804, 0.709804, 1)
theme_override_fonts/font = ExtResource("6_56sps")
text = "Powered by"

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_tvdfs")
stretch_mode = 2
